--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,13 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-servlet_2.5_spec</artifactId>
+			<version>1.2</version>
+			<scope>provided</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
 			<version>1.1.1</version>
@@ -199,8 +206,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<artifactId>spring-webmvc</artifactId>
+			<version>3.2.0.RELEASE</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
