--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>com.alibaba</groupId>
 	<artifactId>fastjson</artifactId>
-	<version>1.1.42.android-SNAPSHOT</version>
+	<version>1.1.42.android</version>
 
 	<packaging>jar</packaging>
 	<name>fastjson</name>
