--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 -->
 	<groupId>com.alibaba</groupId>
 	<artifactId>fastjson</artifactId>
-	<version>1.1.47</version>
+	<version>1.1.48-android-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 	<name>fastjson</name>
