--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.alibaba</groupId>
 	<artifactId>fastjson</artifactId>
-	<version>1.1.49.android</version>
+	<version>1.1.50.android-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 	<name>fastjson</name>
