--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.alibaba</groupId>
 	<artifactId>fastjson</artifactId>
-	<version>1.1.50.android</version>
+	<version>1.1.51.android-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 	<name>fastjson</name>
@@ -49,7 +49,7 @@
 
 	<organization>
 		<name>Alibaba Group</name>
-		<url>http://code.alibabatech.com/</url>
+		<url>https://github.com/alibaba/</url>
 	</organization>
 
 	<licenses>
