--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.alibaba</groupId>
 	<artifactId>fastjson</artifactId>
-	<version>1.1.51.android</version>
+	<version>1.1.52.android-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 	<name>fastjson</name>
@@ -29,9 +29,22 @@
 		</repository>
 	</repositories>
 
+	<developers>
+		<developer>
+			<id>wenshao</id>
+			<name>wenshao</name>
+			<email>szujobs@hotmail.com</email>
+		</developer>
+		<developer>
+			<id>axmanwang</id>
+			<name>axmanwang</name>
+			<email>iamaxman@hotmail.com</email>
+		</developer>
+	</developers>
+	
 	<scm>
-		<url>https://wenshao@github.com/alibaba/fastjson.git</url>
-		<connection>scm:git:https://wenshao@github.com/alibaba/fastjson.git</connection>
+		<url>https://github.com/alibaba/fastjson.git</url>
+		<connection>scm:git:https://github.com/alibaba/fastjson.git</connection>
 	</scm>
 
 	<organization>
